tests/errors/chars_split_chars_join_loop.c
void foo(char *buffer)
    //@ requires [1/2]chars(buffer, 10, _);
    //@ ensures chars(buffer, 10, _); //~ should_fail
{
}
